packages/yew-router-macro/tests/routable_derive/invalid-not-found-fail.stderr
error: there can only be one not_found
 --> $DIR/invalid-not-found-fail.rs:4:5
  |
4 | /     #[not_found]
5 | |     Home,
6 | |     #[at("/404")]
7 | |     #[not_found]
  | |________________^

error: there can only be one not_found
  --> $DIR/invalid-not-found-fail.rs:14:5
   |
14 | /     #[not_found]
15 | |     #[not_found]
   | |________________^
